<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_sort_cv"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:text="@string/dialog_sort_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ScrollView
                android:id="@+id/dialog_sort_sv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fadeScrollbars="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingEnd="16dp"
                    android:paddingRight="16dp">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/dialog_sort_name_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-10dp"
                            android:padding="10dp"
                            android:text="@string/dialog_sort_radio_button_name"
                            tools:ignore="TouchTargetSizeCheck" />

                        <RadioButton
                            android:id="@+id/dialog_sort_date_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/dialog_sort_radio_button_date" />

                        <RadioButton
                            android:id="@+id/dialog_sort_type_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/dialog_sort_radio_button_type" />

                        <RadioButton
                            android:id="@+id/dialog_sort_size_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/dialog_sort_radio_button_size" />

                    </RadioGroup>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_sort_sub_header"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/dialog_sort_asc_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/dialog_sort_radio_button_asc" />

                        <RadioButton
                            android:id="@+id/dialog_sort_desc_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="-10dp"
                            android:padding="10dp"
                            android:text="@string/dialog_sort_radio_button_desc"
                            tools:ignore="TouchTargetSizeCheck" />
                    </RadioGroup>

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|end"
                android:layout_weight="0"
                android:gravity="bottom|end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dialog_sort_cancel_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:paddingTop="0dp"
                    android:text="@string/cancel_button" />

                <Button
                    android:id="@+id/dialog_sort_done_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="12dp"
                    android:paddingTop="0dp"
                    android:text="@string/done_button" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>