<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_create_cv"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_create_header_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/dialog_create_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/dialog_create_et"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/dialog_create_message"
                android:inputType="textPersonName"
                tools:ignore="TextContrastCheck"
                android:importantForAutofill="no" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dialog_create_cancel_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:paddingTop="0dp"
                    android:text="@string/cancel_button" />

                <Button
                    android:id="@+id/dialog_create_create_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="12dp"
                    android:paddingTop="0dp"
                    android:text="@string/create_button" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>